# openvault

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQs.bitcoin-script.md  FAQs.func-py-tests.md  FAQs.md  FAQs.miniscript-sdk-features.md  FAQs.output-descriptor.md  FAQs.psbts-miniscripts.md  FAQs.psbts.md  FAQs.taproot.md  FAQs.witness-btc-script.md  LANDSCAPE.md  LICENSE  README.md  SECURITY.md
docs/design/: taxonmy.md
docs/research/: FAQs.md  WALLETSDEVKITS.md  WALLETSLANDSCAPE.md
docs/research/btc-wallets/: frozenkrill-rust.md  keeper-rust.md  liana-rust.md  nunchuk-c.md  proton-andromeda-rust.md  smartvaults-rust.md  subzero-c-java.md
docs/research/jd/: Unchained-CustodySupportAssociate.md
docs/research/ltng-wallets/: ettawallet-typescript.md  lexi-rust.md
docs/research/notes/: FAQs.md  WALLETSBIPS.md  WALLETSTUTORIALS.md
docs/research/wallets/: liana.md  (+3 more)
jd/: CryptoDOTcom-ProductDirectorLeadInstitutionalPlatformCustody.md  JD_README.md  Kraken-Senior SoftwareEngineerRustBackend(Custody).md  Kraken-SrProductOperationsAssetManagement.md  Unchained-PrincipalProductSecurityEngineer.md
mvps/: cargo.toml
mvps/api_bdkwallet/: Cargo.toml  README.md
mvps/api_btcwallet/: Cargo.toml  README.md
mvps/cli_bdkwallet/: Cargo.toml
mvps/cli_btcwallet/: Cargo.toml
mvps/egui_advancedwallet/: README.md  cargo.toml
mvps/egui_bdkwallet/: cargo.toml
mvps/egui_helloworld/: README.md  cargo.toml
mvps/egui_mobileresponsive/: README.md  cargo.toml
mvps/lib/: Cargo.toml
rsbtc/: .gitignore  Cargo.toml  EXAMPLE1.md  README-APPROACHES.md  README-MVP1.md  SDHSM.md
(+19 files in other folders)
