[package]
name = "cli_btcwallet"
version = "0.1.0"
edition = "2021"

# See more keys: and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.28.1",  features = ["all-keys"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0.192", features = ["derive"] }
tower-http = { version = "0.4.4", features = ["fs"] }
serde_json = "1.0.108"
tower-cookies = "0.9.0"
rstml-component-axum = "0.2.4"
rstml-component = "0.2.1"
env_logger = "0.10.1"
log = "0.4.20"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
